v0.5.1 - Scroll filter and overflow header resolve

--- a/dev/abstract/_Promotion.scss
+++ b/dev/abstract/_Promotion.scss
@@ -28,12 +28,9 @@
 		content: '';
 		width: 200px;
 		height: 52px;
-		background: -webkit-gradient(linear, left top, right top, color-stop(20%, rgba(0, 0, 0, 0)), color-stop(black), color-stop(80%, rgba(0, 0, 0, 0)));
-		background: linear-gradient(90deg, rgba(0, 0, 0, 0) 20%, black, rgba(0, 0, 0, 0) 80%);
-		-webkit-transform: rotate(45deg) translate(-7px, -5px);
-		transform: rotate(45deg) translate(-7px, -38px);
+		background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 66%, rgba(0, 0, 0, 0) 95%);
+		transform: rotate(48deg) translate(20px, -40px);
 		mix-blend-mode: multiply;
-		-webkit-filter: blur(5px);
 		filter: blur(5px);
 	}
 	// La valeur de la promotion sous Equation -------------------------
@@ -41,16 +38,16 @@
 		// Surécriture Equation
 		width: 200px;
 		height: 50px;
-		top: 20px;
-		right: -50px;
+		top: 12px;
+		right: -54px;
 		position: absolute;
 		box-shadow: none;
 		background: var(--global__color__promo);
 		color: var(--global__color__promo--text);
 		font-size: var(--global__font-size__lg);
 		font-weight: 900;
-		line-height: 0.8em;
-		padding: 0.4em 0 1.5em 0;
+		line-height: 1em;
+		padding: 0.3em 0 1.8em 0;
 		text-align: center;
 
 		// Aligne le signe et la valeur
@@ -72,6 +69,12 @@
 			display: block;
 			border: none;
 			line-height: 1.25em;
+
+			// Sur écrit Bootstrap / Equation
+			top: initial;
+			right: initial;
+			position: static;
+			z-index: unset;
 		}
 	}
 }
