--- a/dev/equation/_product-result-main.scss
+++ b/dev/equation/_product-result-main.scss
@@ -19,6 +19,7 @@
 	position: initial;
 	padding: 0;
 	margin: 0;
+	gap: 1rem;
 
 	// Le titre et des options d'affichage --------------------------------
 	&_header {
@@ -51,7 +52,7 @@
 			flex-direction: row;
 			align-items: flex-end;
 			margin: 0;
-			gap: 2rem;
+			gap: 1.5rem;
 
 			// prettier-ignore
 			@include for-tablet { justify-content: space-around; }
@@ -158,7 +159,7 @@
 			grid-area: sort;
 
 			// prettier-ignore
-			@include for-tablet { margin: 2rem 0 3rem 0 ; }
+			@include for-tablet { margin: 1rem 0; }
 
 			// Créé un pseudo label au dessus
 			&::before {
@@ -189,7 +190,7 @@
 			// Suppression de la barre oblique
 
 			@extend .abstract-H2;
-			padding-bottom: 1rem;
+			padding-bottom: 2rem;
 			border-bottom: var(--global__UI__border-style);
 		}
 
@@ -246,7 +247,8 @@
 	&_footer {
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
+		flex-wrap: wrap;
+		justify-content: center;
 		align-items: flex-end;
 
 		// prettier-ignore
