--- a/dev/equation/_product-result.scss
+++ b/dev/equation/_product-result.scss
@@ -13,12 +13,12 @@
 // Sur 2 colonne jusqu'au format "tablette" /////////////////////////////
 #product_result_wrapper {
 	display: grid;
-	grid-template-columns: 1fr 300px;
+	grid-template-columns: 1fr 250px;
 	grid-template-areas: 'main filters';
 	gap: 5rem;
 
 	@include for-tablet {
-		grid-template-columns: 1fr;
+		grid-template-columns: 100%;
 		grid-template-areas:
 			'main'
 			'filters';
