--- a/dev/equation/_product-thumbnail.scss
+++ b/dev/equation/_product-thumbnail.scss
@@ -82,6 +82,7 @@
 		text-align: unset;
 		margin-bottom: 2rem;
 		height: 50px;
+		padding: 0;
 
 		&::before {
 			width: 100%;
@@ -169,7 +170,7 @@
 	form {
 		display: contents;
 	}
-	.product-marque,
+	//.product-marque,
 	.product-panier {
 		&-wrapper {
 			--input__opacity: 1;
