--- a/dev/equation/_product-wrapper.scss
+++ b/dev/equation/_product-wrapper.scss
@@ -34,12 +34,12 @@
 	// prettier-ignore
 	.col-inline{  display: contents ;}
 
-	@include setGrid(600px, 7rem);
+	@include setGrid(600px, 6rem);
 }
 
 .product-thumbnail-wrapper {
 	// prettier-ignore
 	.col-thumbnail{ display: contents ;}
 
-	@include setGrid(280px, 7rem);
+	@include setGrid(250px, 6rem);
 }
